Closed Bug 474774 Opened 15 years ago Closed 15 years ago

###!!! ASSERTION: URI is empty: '!aURI.IsEmpty()' when sending email with no FCC set or when saving to send later.

Categories

(MailNews Core :: Networking: SMTP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b2

People

(Reporter: standard8, Assigned: standard8)

References

Details

Attachments

(1 file)

I was trying to write some unit tests for SendLater and decided not to save a copy to the sent folder to cut down on notifications for the time being. I came across an assertion triggered in two different cases:

###!!! ASSERTION: URI is empty: '!aURI.IsEmpty()'

They are both unnecessary as in both cases the fcc field is empty (because we're not saving to fcc) so there is no point in even trying to find the folder we're saving the fcc to.
Attached patch The fixSplinter Review
Fix with unit test, stops the assertions so that running tests in debug mode won't fail.
Attachment #358169 - Flags: superreview?(bienvenu)
Attachment #358169 - Flags: review?(bienvenu)
Attachment #358169 - Flags: superreview?(bienvenu)
Attachment #358169 - Flags: superreview+
Attachment #358169 - Flags: review?(bienvenu)
Attachment #358169 - Flags: review+
Product: Core → MailNews Core
Checked in: http://hg.mozilla.org/comm-central/rev/48159f72aaf7
Flags: in-testsuite+
Target Milestone: --- → Thunderbird 3.0b2
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Depends on: 496345
Depends on: 557050
Blocks: 557050
No longer depends on: 557050
No longer blocks: 557050
You need to log in before you can comment on or make changes to this bug.