Fix Bug 474774 ###!!! ASSERTION: URI is empty: '!aURI.IsEmpty()' when sending email with no FCC set or when saving to send later. r/sr=bienvenu